# Baseline-Agent-Mission-Control-OS-V8

./: .dockerignore  .dockerignore.hardened  .env.example.production  .env.production.example  .gitignore  BILLING_OVERHAUL.md  CLAUDE.md  Caddyfile.production  DEPLOYMENT-PREP.md  Dockerfile  Dockerfile.hardened  EMERGENT_HANDOFF.md  README.md  docker-compose.droplet.yml  docker-compose.production.yml  eslint.config.mjs  next.config.js  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.demo-obsidian/: 00-operations-doctrine.md  01-partner-sync-yesterday.md  02-sop-outreach-cadence.md
.do/: app.yaml
.emergent/: emergent.yml
agent_mesh/: __init__.py  agent_base.py  demo.py  mc_sync.py  orchestrator.py  registry.py  task_protocol.py  workers.py
apps/flight-deck/src-tauri/: Cargo.toml  tauri.conf.json
apps/flight-deck/src-tauri/capabilities/: default.json
apps/flight-deck/src-tauri/icons/: README.md  icon.icns
apps/flight-deck/src-tauri/src/: lib.rs  main.rs
backend/: requirements.txt  server.py
baseline-os/: .gitignore  BASELINE_OS_PHASE1.md  BASELINE_OS_PHASE2.md  BASELINE_OS_PHASE3.md  CLI_ANYTHING_AUDIT.md  CLI_ANYTHING_EVALUATION.md  CROSS_MACHINE_PROOF.md  DAILY_BRIEF_CONTRACT.md  IMPLEMENTATION_REPORT_2026-06-04.md  LICENSE  MISSION_CONTROL_SYNC.md  NOTICE  README.md  SYSTEM_READINESS_REPORT.md  VALUE_ROI_CONTRACT.md  launch.sh  package.json  vite.config.ts
baseline-os/src-tauri/: Cargo.toml  tauri.conf.json
baseline-os/src-tauri/capabilities/: default.json
baseline-os/src-tauri/icons/: icon.icns
baseline-os/src-tauri/src/: lib.rs  main.rs  pairing.rs
baseline-os/src-tauri/ui/: app.js  index.html  styles.css
desktop/: README.md  index.html  package.json  vite.config.js
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/: ADMIN_GUIDE.md  BILLION_DOLLAR_POSITIONING.md  CLAUDE_OS_INTEGRATION_PLAN.md  CLI_GUIDE.md  CLI_MCP_MAPPING.md  CUSTOMER_ONBOARDING_SOP.md  CUSTOMER_QUICK_START.md  CUSTOMER_SUCCESS_SOP.md  CUSTOMER_ZERO_WALKTHROUGH.md  FINAL_PRODUCTION_READINESS_REPORT.md  FIRST_14_DAY_ACTIVATION_PLAN.md  FIRST_CUSTOMER_PLAYBOOK.md  FLIGHT_DECK_CUSTOMER_GUIDE.md  FLIGHT_DECK_INSTALLATION_GUIDE.md  HANDOFF_TO_CLAUDE_CODE.md  LAUNCH-RUNBOOK.md  MCP_TOOL_AUDIT.md  OPERATOR_INPUT_AUDIT.md  PHASE_HISTORY.md  RUNTIME_SETUP_GUIDE.md  SALES_ASSETS.md  STRIPE_LIVE_APPLICATION_REPORT.md  TROUBLESHOOTING_GUIDE.md  VERIFICATION_2026-06-02.md  multitenant-audit.md  panel-story-audit.md  performance-audit.md  postgres-migration.md
frontend/: launch.sh  package.json
memory/: CHANGELOG.md  PRD.md  test_credentials.md
messages/: ar.json  de.json  en.json  es.json  fr.json  ja.json  ko.json  pt.json  ru.json  zh.json
public/: llms.txt  robots.txt
scripts/: api-proxy.cjs  backup-db.sh  build-pdfs.py  cleanup-legacy-skill-memory.mjs  connect-runtime.mjs  customer-zero-walkthrough.mjs  demo_seed.py  deploy-droplet.sh  init-db-postgres.sql  load-env.cjs  local-flight-deck-check.mjs  mc-cli.cjs  mc_seed_phase2.py  patch-standalone-port.cjs  post-build.sh  preflight-production.sh  production-start.sh  restore-db.sh  route-health.mjs  runtime-telemetry-harness.mjs  runtime-validate.sh  seed-billing-data.ts  seed-demo-workspace.ts  smoke-test-prod.sh  start-with-node22.sh  supervisor.agent-gateway.conf
services/agent-gateway/: .gitignore  Dockerfile  README.md  pyproject.toml
services/agent-gateway/src/agent_gateway/: __init__.py  __main__.py  config.py  gateway.py  http_api.py  routing.py  storage.py  telemetry.py  workers.py  worktree.py
services/agent-gateway/tests/: test_config.py  test_routing.py  test_storage.py
src/: index.ts  middleware.ts  proxy.ts
test_reports/: cli_mcp_audit_test.sh  cli_test.sh  flight_deck_cli_test.sh  iteration_1.json  iteration_10.json  iteration_11.json  iteration_12.json  iteration_2.json  iteration_3.json  iteration_4.json  (+4 more)
(+990 files in other folders)
