[package]
name = "baseline-flight-deck"
version = "0.1.0"
description = "Baseline Flight Deck — native desktop cockpit for Baseline OS, Mission Control, and local runtimes."
authors = ["Baseline"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "baseline_flight_deck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
