[package]
name = "baseline-flight-deck"
version = "0.1.0"
description = "AI Workforce Operator Terminal — desktop shell around Mission Control"
authors = ["Baseline OS"]
edition = "2021"

[lib]
name = "baseline_flight_deck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
  "tray-icon",
  "image-png",
  "image-ico",
] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
